tests/flow/declare_var/test.js
declare var x: T;

(0: T); // OK
(null: T); // error: null ~> number

type T = number;
